desc/src/snapshots/ninja_desc__test__in_and_out_basic.snap
---
source: desc/src/lib.rs
expression: ast
---
Description {
    builds: [
        Build {
            action: Command(
                "echo a.txt b.txt makes c.txt d.txt",
            ),
            inputs: [
                [
                    97,
                    46,
                    116,
                    120,
                    116,
                ],
                [
                    98,
                    46,
                    116,
                    120,
                    116,
                ],
            ],
            outputs: [
                [
                    99,
                    46,
                    116,
                    120,
                    116,
                ],
                [
                    100,
                    46,
                    116,
                    120,
                    116,
                ],
            ],
        },
    ],
}
